add layout for main screen

--- a/ScheduleProject/app/src/main/res/values/strings.xml
+++ b/ScheduleProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ScheduleProject</string>
+    <string name="add_card_name">+ Add a card</string>
 </resources>
