--- a/ScheduleProject/app/src/main/res/values/strings.xml
+++ b/ScheduleProject/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ScheduleProject</string>
     <string name="add_card_name">+ Add a card</string>
+    <string name="search_name">Search</string>
+    <string name="add_list_name">Add list</string>
 </resources>
