--- a/ScheduleProject/app/src/main/res/values/strings.xml
+++ b/ScheduleProject/app/src/main/res/values/strings.xml
@@ -14,4 +14,16 @@
     <string name="btn_save">SAVE</string>
     <string name="task_create_datePicker">Choose Date</string>
     <string name="task_create_timePicker">Choose time</string>
+
+    <string name="register_button_title">Register</string>
+    <string name="loggin_button_title">Log In</string>
+    <string name="create_board_title">Create New Board</string>
+    <string name="create_board_name">Name</string>
+    <string name="create_board_color">Color</string>
+    <string name="Edit_Button_Title">Edit</string>
+    <string name="App_Icon_Description">This is app icon</string>
+    <string name="Add_Board_Button_Text">+</string>
+    <string name="Text_Current_Color">Current Color</string>
+    <string name="Text_Edit_Board">Edit Board</string>
+    <string name="Text_Enter_Name">Enter Name</string>
 </resources>
