--- a/ScheduleProject/app/src/main/res/values/strings.xml
+++ b/ScheduleProject/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="update_task_header">Update Task</string>
     <string name="task_detail_header">Task Detail</string>
     <string name="btn_back">Back</string>
+    <string name="getting_started">Getting started</string>
 </resources>
